Fix event booking bill delivery fee and sync with admin design

--- a/index.html
+++ b/index.html
@@ -939,9 +939,9 @@
                         <span>Subtotal</span>
                         <span class="font-medium" id="inv-subtotal">₹0</span>
                     </div>
-                    <div class="flex justify-between text-xs text-gray-500">
+                    <div id="inv-delivery-row" class="flex justify-between text-xs text-gray-500">
                         <span>Delivery Fee</span>
-                        <span class="font-medium">- ₹30</span>
+                        <span class="font-medium"> ₹30</span>
                     </div>
                     <div
                         class="flex justify-between text-lg font-black text-gray-900 pt-2 border-t border-gray-100 mt-2">
